* Get invites back to work in the UI. (marco)
* Get the title on activity palette in the mesh to work. (marco)

Snapshot e65fef5c79

* Support mutable name/tags in sugar.presence (smcv)
* Support invitations in sugar.presence (smcv)
* Add badges to infrastructure access points in mesh view (dcbw)
* Add palette to Wireless device on Home view showing channel (dcbw)

Snapshot 23ad88db0c

* Re-share an activity when it gets launched from the journal if it was
    shared before (dcbw)
* Update to new tubes API (cassidy)

Snapshot 246ec1e4aa

* Update arabic translation. (khaled)
* Restore Icon's ability to load absolute file paths. (tomeu)
* #722 Show "charging" badge on battery. (danw)
* #2010 Remember state when scrubbing. (marco)

Snapshot d38cacfe2c

* Add icons to the activity ring palette. (danw)

Snapshot e83b98a8f6

* #2912: Improvements to GlibURLDownloader API (dcbw)
* #2299: Really fix buddy properties coming through as arrays of bytes (dcbw)

Snapshot b24a28a77d

* #2012: Fix palette position on the left frame panel. (marco)
* #2297: Make activity name translatable. (danw)
* #2695: Recognize text files as such. (tomeu)
* #2669: Add a border to the inner of the frame. (marco)
* #2703: Update macedonian translation. (ArangelAngov)
* #2543: Offer multiple activities for opening clipboard objects. (tomeu)

Snapshot d93122bf5e

* #2751 Add keybindings for max/min brightness/volume

Snapshot 040c94d181

* #2099 Tweak a color pair as requested by Walter. (marco)
* Draw an invoker that is connected with the palette for toolbuttons. (benzea)
* Fix traceback when reading in saved WPA2 network configs (dcbw)
* #2475 Retrieve correctly the file path for files in removable devices. (tomeu)
* #2119 If config is missing start intro. (marco)
* #2083 Fix centering of items in the spread box. (marco)
* #2486 In the intro screen name page enter goes to next page. (marco)
* #2570 Accept correctly image drops from Record.
* Add Greek translation. (simosx)