@@ -1,3 +1,4 @@
+* #3045: Fix issues with the clipboard icons and palettes. (tomeu)
 * Get invites back to work in the UI. (marco)
 * Get the title on activity palette in the mesh to work. (marco)
 
